# socknet

./: .gitmodules
derive/: Cargo.toml
derive/src/: lib.rs
socknet/: Cargo.toml
socknet/src/: config.rs  connection.rs  endpoint.rs  lib.rs  message.rs  stream.rs  utility.rs
socknet/src/connection/: active.rs  connection.rs  datagram.rs  error.rs  event.rs  opened.rs
socknet/src/connection/active/: local.rs  remote.rs
socknet/src/connection/opened/: local.rs  remote.rs
socknet/src/event/: event.rs  queue.rs
socknet/src/message/: stream_handler.rs
socknet/src/packet/: guarantee.rs  packet.rs  queue.rs
socknet/src/socket/: default.rs  factory.rs  mod.rs
socknet/src/stream/: builder.rs  error.rs  example.rs  handler.rs  kind.rs  local.rs  processor.rs  recv.rs  recv_bytes.rs  registry.rs  send.rs  typed.rs  wrappers.rs
socknet/src/stream/kind/: locality.rs  recv.rs  send.rs
socknet/src/stream/kind/recv/: datagram.rs  ongoing.rs  read.rs
socknet/src/stream/kind/recv/datagram/: local.rs  remote.rs
socknet/src/stream/kind/recv/ongoing/: local.rs  remote.rs
socknet/src/stream/kind/send/: datagram.rs  ongoing.rs  write.rs
socknet/src/stream/kind/send/datagram/: local.rs  remote.rs
socknet/src/stream/kind/send/ongoing/: local.rs  remote.rs
socknet/src/stream/processor/: handler.rs  registerable.rs  registration.rs  registry.rs
socknet/src/stream/processor/handler/: handler.rs  registry.rs
socknet/src/stream/wrappers/: bi.rs  datagram.rs  uni.rs
