[package]
name = "socknet"
version = "0.1.0"
authors = ["Dustin Yost <dustin.yost.t@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
derive = ["socknet-derive"]
rustls-logging = ["rustls/logging"]
rustls-dangerous = ["rustls/dangerous_configuration"]

[dependencies]
anyhow = "1.0"
socknet-derive = { version = "0.1.0", optional = true, path = "../derive" }
# [networking] dependency from `laminar` used to send packers/receive events
crossbeam-channel = "0.5"
log = "0.4"
# [utility] for getting performance information and rendering via any chosen viewer
profiling = "1.0"
# [serialization] expanded serialization support
rmp = "0.8"
# [serialization] expanded serialization support for serde
rmp-serde = "0.15"
# [serialization]
serde = { version = "1.0", features = ["derive"] }

async-channel = "1.6"
futures = "0.3"
tokio = { version = "1.15", features = ["full"] }
quinn = "0.8"
rustls = { version = "0.20", default-features = false, features = ["tls12"] }
futures-util = "0.3"
bytes = "1.1"
bincode = "1.3"
sha2 = "0.10"
base64ct = { version = "1.3", features = ["std"] }
thiserror = "1.0"
