[package]
name = "socknet"
version = "0.1.0"
authors = ["Dustin Yost <dustin.yost.t@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
derive = ["socknet-derive"]
rustls-logging = ["rustls/logging"]
rustls-dangerous = ["rustls/dangerous_configuration"]

[dependencies]
socknet-derive = { version = "0.1.0", optional = true, path = "../derive" }

# [error] collapsing any error into one result type
anyhow = "1.0"
# [error] easy implementation of new errors
thiserror = "1.0"

# [metrics] for writing runtime information to log file/console
log = "0.4"
# [metrics] for getting performance information and rendering via any chosen viewer
profiling = "1.0"

# [serialization] general usage
serde = { version = "1.0", features = ["derive"] }
# [serialization] to binary
bincode = "1.3"

# [async] base async traits
futures = "0.3"
# [async] adv async traits
futures-util = "0.3"
# [async] async/await syntax and multithreading
tokio = { version = "1.15", features = ["full"] }
# [async] channels with future usage
async-channel = "1.6"

# [net] underlying protocols for qiunn
rustls = { version = "0.20", default-features = false, features = ["tls12"] }
# [net] rust implementation of QUIC protocol
quinn = "0.8"
# [net] interface for handling unreliable packet data
bytes = "1.1"
# [net] hashing certificates for getting fingerprints
sha2 = "0.10"
# [net] encoding certificates for getting fingerprints
base64ct = { version = "1.3", features = ["std"] }
